testdata/language-features/basic-values/if03.reject.out
type error: can not unify
[32m'Bool[m
with
[32m'Tuple0[m

in testdata/language-features/basic-values/if03.reject.lc:1:13:
value1 = if () then () else ()
            ^^
